crates/stc_ts_file_analyzer/tests/pass/types/intersection/intersectionReductionStrict/1.ts
// @strict: true

type A = { kind: "a"; foo: string };
type B = { kind: "b"; foo: number };
type C = { kind: "c"; foo: number };

declare let x: A | (B & C); // A

let a: A = x;
