crates/stc_ts_file_analyzer/tests/errors/issues/0xxx/754/1.ts
type A = { a: string };
type B = { b: number };
type C = { c: boolean };
type IntesrectionABC<T> = T & A & B & C;
type ABC = { a: string; d: number };
function some<T>() {
    let foo: ABC = {} as IntesrectionABC<T>;
}
